# beam

./: .gitignore  app_data.pkl  build.sh  flow.md  nodemon.json  package-lock.json  pyproject.toml  readme.md  start.sh  test.py
client/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
client/src/: import.css  main.tsx
client/src/pages/: dashlayout.tsx  (+3 more)
data/: test_json_file.json
docker/: Dockerfile  entrypoint.sh  nginx.conf
engine/: __main__.py  pyproject.toml  run.sh
server/: __main__.py  globals.py  router.py
src/: __main__.py  app.py  dev.py  globals.py  utils.py
src/core/: recommend.py
src/models/: app_data.py  app_state.py  data_source.py  dso_abc.py  dso_database.py  dso_json.py  metric_data.py  metric_handler.py  metrics.py  session_data.py  session_handler.py
src/recommender/: abc_recommender.py  data_processing.py  logistic_recommender.py  none_recommender.py  similarity_recommender.py
src/routes/: dashboard.py  external_api.py  internal_api.py
src/server/: __init__.py  globals.py  router.py
src/static/: global.css
src/templates/: datasource.html  layout.html  monitor.html
static/: datasource.js  global.css  layout.css  layout.js
static/css/: datasource.css  index.css  layout.css  monitor.css  sessions.css  settings.css
static/js/: global.js  package.json  tsconfig.json
templates/: datasource.html  index.html  layout.html  logs.html  metrics.html  monitor.html  sessions.html  settings.html
tests/models/: test_data_source.py
tests/recommender/: test_data_processing.py  test_logistic_recommender.py
(+24 files in other folders)
