[project]
name = "beam"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.3",
    "psutil>=7.0.0",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
